[Fix][Lex] Adjusted spacing for button and form

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -35,7 +35,7 @@
 .form__btn {
   background: var(--main-gradient);
   color: var(--white);
-  margin-top: 8px;
+  margin-top: 12px;
   padding: 8px;
   font-size: 1em;
   font-weight: 700;
